; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/emu10k1/extr_emu10k1x.c_mpu401_clear_rx.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/emu10k1/extr_emu10k1x.c_mpu401_clear_rx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.emu10k1x = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.emu10k1x_midi = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.emu10k1x*, %struct.emu10k1x_midi*)* @mpu401_clear_rx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mpu401_clear_rx(%struct.emu10k1x* %0, %struct.emu10k1x_midi* %1) #0 {
  %3 = alloca %struct.emu10k1x*, align 8
  %4 = alloca %struct.emu10k1x_midi*, align 8
  %5 = alloca i32, align 4
  store %struct.emu10k1x* %0, %struct.emu10k1x** %3, align 8
  store %struct.emu10k1x_midi* %1, %struct.emu10k1x_midi** %4, align 8
  store i32 100000, i32* %5, align 4
  br label %6

6:                                                ; preds = %20, %2
  %7 = load i32, i32* %5, align 4
  %8 = icmp sgt i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %6
  %10 = load %struct.emu10k1x*, %struct.emu10k1x** %3, align 8
  %11 = load %struct.emu10k1x_midi*, %struct.emu10k1x_midi** %4, align 8
  %12 = call i64 @mpu401_input_avail(%struct.emu10k1x* %10, %struct.emu10k1x_midi* %11)
  %13 = icmp ne i64 %12, 0
  br label %14

14:                                               ; preds = %9, %6
  %15 = phi i1 [ false, %6 ], [ %13, %9 ]
  br i1 %15, label %16, label %23

16:                                               ; preds = %14
  %17 = load %struct.emu10k1x*, %struct.emu10k1x** %3, align 8
  %18 = load %struct.emu10k1x_midi*, %struct.emu10k1x_midi** %4, align 8
  %19 = call i32 @mpu401_read_data(%struct.emu10k1x* %17, %struct.emu10k1x_midi* %18)
  br label %20

20:                                               ; preds = %16
  %21 = load i32, i32* %5, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %5, align 4
  br label %6

23:                                               ; preds = %14
  ret void
}

declare dso_local i64 @mpu401_input_avail(%struct.emu10k1x*, %struct.emu10k1x_midi*) #1

declare dso_local i32 @mpu401_read_data(%struct.emu10k1x*, %struct.emu10k1x_midi*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
